k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: delbot
  labels:
    name: delbot
    app: delbot
    environment: production
